--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "modules/zsh-notify/external"]
 	path = modules/zsh-notify/external
 	url = https://github.com/marzocchi/zsh-notify.git
+[submodule "modules/prompt/external/statusline"]
+	path = modules/prompt/external/statusline
+	url = https://github.com/triyangle/statusline.git
